# mini_rt

./: CMakeLists.txt
src/: main.cpp
